<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="@dimen/width_imgLista"
            android:layout_height="@dimen/height_imgLista">

            <ImageView
                android:id="@+id/fragment_pessoa_list_item_imgPessoa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_menu_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/NOME_pessoa"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_pessoa_list_item_tvNome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_pessoa" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/RG_pessoa"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_pessoa_list_item_tvRg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rg_pessoa" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/espaco_nome"
                        android:text="@string/CPF_pessoa"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_pessoa_list_item_tvCpf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cpf_pessoa" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
